# ullm

./: .gitignore  404.html  CHANGELOG.md  CI_SETUP.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
api/completion/: index.html
api/exceptions/: index.html
api/responses/: index.html
api/types/: index.html
architecture/decisions/: index.html
architecture/providers/: index.html
architecture/registry/: index.html
changelog/: index.html
development/contributing/: index.html
development/releases/: index.html
development/setup/: index.html
development/testing/: index.html
docs/: README.md  changelog.md  index.md
docs/api/: completion.md  exceptions.md  responses.md  types.md
docs/architecture/: decisions.md  providers.md  registry.md
docs/development/: contributing.md  releases.md  setup.md  testing.md
docs/getting-started/: basic-usage.md  installation.md  quickstart.md
docs/guide/: dspy-integration.md  error-handling.md  overview.md  providers.md  streaming.md  structured-output.md  tool-calling.md
examples/: async_usage.py  basic_usage.py  dspy_integration.py  structured_output.py  tool_calling.py
getting-started/basic-usage/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/dspy-integration/: index.html
guide/error-handling/: index.html
guide/overview/: index.html
guide/providers/: index.html
guide/streaming/: index.html
guide/structured-output/: index.html
guide/tool-calling/: index.html
search/: search_index.json
tests/: __init__.py  test_completion.py  test_providers.py  test_types.py
ullm/: __init__.py  exceptions.py  main.py  providers.py  registry.py  types.py
ullm/clients/: __init__.py  anthropic.py  base.py  bedrock.py  groq.py  openai.py
